# Research_Case_Agent_Modeling

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: 0_Reformated_SOSEC_Code-book_US_November.csv  0_Reformated_SOSEC_Code-book_US_November.xlsx  0_Reformated_SOSEC_Code-book_US_November_Reformulated_Questions_For_Dict.csv  0_Reformated_SOSEC_Code-book_US_November_Reformulated_Questions_For_Dict.xlsx  0_Reformated_SOSEC_Code-book_US_November_Reformulated_Questions_For_Dict_All_Columns.csv  0_Reformated_SOSEC_Code-book_US_November_Reformulated_Questions_For_Dict_All_Columns.xlsx  SOSEC_Code-book_Current.csv  _0_US_zipcodes.csv
data/0_SOSEC Data RCS/: 0_combined_data.csv  SOSEC_Code-book_US_November.xlsx  SOSEC_Codebook_US_2024_May.xlsx  new_data_sample.csv
data/1_combined_preprocess/: 8_df_dataset_with_codebook_columns_filtered_hotencoding.csv  9_processed_data_for_personas_Format_1.csv  9_processed_data_for_personas_Format_2.csv
data/1_preprocess/: 1_codebook_no_matching_columns_in_dataset.csv  6_removed_columns_due_to_lessdata.csv  (+3 more)
data/1_preprocess(DEPRECIATED_NOT_TO_BE_USED)/: 1_codebook_no_matching_columns_in_dataset.csv  1_df_dataset_with_codebook_columns_full_no_processing.csv  2_df_dataset_with_codebook_columns_full_F2A3.csv  3_df_dataset_with_codebook_columns_full_F7mA1.csv  4_df_dataset_with_codebook_columns_filtered_outofrange.csv  5_df_dataset_with_codebook_columns_filtered_F7cA1-yob.csv  6_columns_having_70percent_empty_values.csv  6_removed_columns_due_to_lessdata.csv
src/: data_preprocessing.ipynb  statistics.ipynb
(+226 files in other folders)
