[tool.poetry]
name = "research-case-agent-modeling"
version = "0.1.0"
description = ""
authors = ["Hisham Madcor <hisham3madcor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
